chore: remove unused import